--- a/public/pages/theory/01_theme/01_lesson/01_lesson.html
+++ b/public/pages/theory/01_theme/01_lesson/01_lesson.html
@@ -54,22 +54,10 @@
 
 
             <h2 class="main__title-2">Принцип 80 / 20</h2>
-            <p>Это принцип ксается не только языка JavaScript, он распространяется на многие аспекты различных сфер. В
+            <p>Это принцип касается не только языка JavaScript, он распространяется на многие аспекты различных сфер. В
                 частности если говорить про JavaScript, то к числу 80 относится великое множество возможностей языка, и
                 эту величину отнесем к процентам. 80% это то количество, которое существует в языке, но применяется
                 довольно редко. И 20% его составляющей используется постоянно.</p>
-
-
-            <h2 class="main__title-2">Где выполнять JavaScript код?</h2>
-            <p>
-                JavaScript код можно выполнять в нескольких средах:
-            </p>
-            <ul>
-                <li>Веб-браузер. JavaScript встроен в любой веб-браузер</li>
-                <li>Node.js</li>
-                <li>В любой среде разработки IDE. Например Visual Studio Code</li>
-            </ul>
-
 
         </div><!--main__wrapper-1-->
     </div><!--main-->
