--- a/public/pages/theory/02_theme/01_lesson/01_lesson.html
+++ b/public/pages/theory/02_theme/01_lesson/01_lesson.html
@@ -17,7 +17,7 @@
             <h1 class="main__title-1">Урок 01: Самое важное в JavaScript</h1>
 
             <p>
-                Самое важное в JavaScript это - функции, выражения, объекты
+                Самое важное в JavaScript это - выражения, функции, объекты
             </p>
 
             <p>
@@ -26,7 +26,7 @@
             </p>
 
             <p>
-                Пример объекта
+                Пример объекта :
             </p>
 
             <!---------- DEMO CODE ---------->
@@ -48,6 +48,39 @@
                 </code>
             </pre>
 
+            <p>
+                <span class="text__accent-padding">visible</span>
+                <span class="text__accent-padding">colorDepth</span>
+                <span class="text__accent-padding">title</span>
+                <span class="text__accent-padding">Orientation</span> -- это все свойства конкретного объекта.
+            </p>
+
+            <p>
+                <span class="text__accent-padding">true</span>
+                <span class="text__accent-padding">24</span>
+                <span class="text__accent-padding">'My image'</span>
+                и т.д. -- это значения соответствующих свойств.
+            </p>
+
+            <p>
+                У некоторых свойств значением может быть также объект. Такие объекты называются вложенными объектами.
+            </p>
+
+            В данном случае вложенным объектом является:
+            <!---------- DEMO CODE ---------->
+            <pre class="code__example-block">
+                <code>
+            Orientation: {
+                angle: 0,
+                type: 'landscape'
+            },
+                </code>
+            </pre>
+
+            <p>У этого вложенного объекта есть свои свойства со значениями.</p>
+
+
+            <p>В JavaScript :</p>
             <ul>
                 <li>Массив это - объект</li>
                 <li>Функция это - объект</li>
@@ -56,10 +89,10 @@
             </ul>
 
             <p>
-                Числа и строки ведут себя как объекты. Значения такие как число и строка это примитивные значения.
+                Числа и строки только ведут себя как объекты. Значения такие как число и строка это примитивные
+                значения. Все сущности в JavaScript - это объекты.
                 Объект это набор свойств, и у свойств есть свои значения.
             </p>
-
 
         </div><!--main__wrapper-1-->
     </div><!--main-->
