--- a/public/pages/theory/02_theme/02_lesson/02_lesson.html
+++ b/public/pages/theory/02_theme/02_lesson/02_lesson.html
@@ -18,7 +18,7 @@
             <h1 class="main__title-1">Урок 02: Что такое console.log ?</h1>
 
             <p>
-                console.log('Hello world') - это выражение
+                <span class="text__accent-padding">console.log('Hello world')</span> -- это выражение
             </p>
 
             <!---------- DEMO CODE ---------->
@@ -29,18 +29,36 @@
             </pre>
 
             <ul>
-                <li>console - это объект. У объекта есть свойства. У каждого свойства есть пара - ключ:значение.</li>
-                <li>log - это метод. Метод это функция, которая является значением одного из свойств объекта.</li>
-                <li>точка между console и log - это синтаксис JavaScript, который называется точечная запись. С помощью
-                    точечной записи можно получать доступ к свойствам объектов. В данном случае в console.log('Hello
-                    world') мы получаем доступ к методу объекта. Метод называется log</li>
-                <li>Скобки это вызов метода. Это также часть синтаксиса JavaScript. Поставив скобки после log, мы
-                    говорим, что мы хотим вызвать эту функцию, которая является методом объекта console.</li>
-                <li>('Hello world') - Внутри вызова метода находится аргумент, и в данном примере это просто значение
-                    типа - строка(string)</li>
+                <li><span class="text__accent-padding">console</span> - это объект. У объекта есть свойства.
+                    И каждое свойство - это пара - ключ:значение.</li>
+                <li><span class="text__accent-padding">log</span> -- это метод. Метод это функция, которая
+                    является значением одного из свойств объекта. У нашего объекта
+                    <span class="text__accent-padding">console</span> есть свойство, значение которого
+                    это функция, а такие свойства называются методами. То есть
+                    <span class="text__accent-padding">log</span> -- это метод.
+
+                </li>
+
+                <li>точка между <span class="text__accent-padding">console</span> и
+                    <span class="text__accent-padding">log</span> - это синтаксис JavaScript, который называется
+                    точечная запись. С помощью точечной записи можно получать доступ к свойствам объекта.
+                    В данном случае в <span class="text__accent-padding">console.log('Hello world')</span>
+                    мы получаем с помощью точечной записи доступ к методу объекта. Метод называется
+                    <span class="text__accent-padding">log</span>
+                </li>
+
+                <li>Скобки это вызов метода. Это также часть синтаксиса JavaScript. Поставив скобки после
+                    <span class="text__accent-padding">log</span>, мы говорим, что мы хотим вызвать эту функцию, которая
+                    является методом объекта <span class="text__accent-padding">console</span>. То есть вызывается метод
+                    <span class="text__accent-padding">log</span>
+                </li>
+
+                <li><span class="text__accent-padding">('Hello world')</span> - Внутри вызова метода находится аргумент,
+                    и в данном примере это просто значение типа - строка(string)
+                </li>
             </ul>
 
-            <p>метод dir</p>
+            <p>метод <span class="text__accent-padding">dir</span></p>
             <!---------- DEMO CODE ---------->
             <pre class="code__example-block">
                 <code>
@@ -49,13 +67,16 @@
             </pre>
 
             <p>
-                Кроме метода log у объекта console есть такой метод как dir. И с помощью этого метода можно отобразить в
-                консоли все свойства того или иного объекта. Например с помощью console.dir можно увидеть, что любая
+                Кроме метода <span class="text__accent-padding">log</span> у объекта
+                <span class="text__accent-padding">console</span> есть такой метод как
+                <span class="text__accent-padding">dir</span>. И с помощью этого метода можно отобразить в
+                консоли все свойства того или иного объекта. Например с помощью
+                <span class="text__accent-padding">console.dir</span> можно увидеть, что любая
                 функция в JavaScript это объект, и увидеть все свойства этого объекта.
             </p>
 
             <p>
-                метод table
+                метод <span class="text__accent-padding">table</span>
             </p>
             <!---------- DEMO CODE ---------->
             <pre class="code__example-block">
@@ -65,29 +86,50 @@
             </pre>
 
             <p>
-                C помощью метода table можно увидеть в консоли все свойства того или иного объекта, который передан в
-                этот метод как аргумент, который находится внутри скобок в табличном виде. То есть все свойства объекта
-                будут отображены в виде таблицы.
+                C помощью метода <span class="text__accent-padding">table</span> можно увидеть в консоли все свойства
+                того или иного объекта, который передан в этот метод как аргумент, который находится внутри скобок в
+                табличном виде. То есть все свойства объекта будут отображены в виде таблицы.
             </p>
 
             <p>Любое выражение возвращает значение.</p>
 
             <p>
-                В консоли браузера во вкладке console наберем команду console.log('Name') Нажимаем enter и получаем
-                следующий результат:
-                В консоли отображается Name, а также виден ответ от интерпретатора JavaScript - undefined
-                Это результат этого выражения. Метод log возвращает значение undefined
-                Если запустить это выражение в приложении terminal , то результат будет такой же.
+                В консоли браузера во вкладке <span class="text__accent-padding">console</span> наберем команду
+                <span class="text__accent-padding">console.log('Sergey')</span>. Нажимаем enter и получаем
+                следующий результат:<br>
+                В консоли отображается <span class="text__accent-padding">Sergey</span>, а также виден
+                ответ от интерпретатора JavaScript - <span class="text__accent-padding">undefined</span>
+                Это результат этого выражения. Метод <span class="text__accent-padding">log</span>
+                возвращает значение <span class="text__accent-padding">undefined</span>
             </p>
 
             <p>
-                console - это объект. Как это проверить? Можно написать console в консоли браузера и нажать enter
+                Перейдем в программу terminal (gitbash), введем команду
+                <span class="text__accent-padding">node</span> -- эта команда запускает интерактивный
+                интерпретатор node.js
+            </p>
+
+            <p>Далее мы введем команду <span class="text__accent-padding">console.log('Sergey')</span>
+                и нажимаем enter
+            </p>
+            <p>
+                Мы видим такой же результат как и в консоли веб-браузера.
             </p>
 
             <p>
-                Консоль покажет ряд свойств этого объекта. Некоторые из этих свойств имеют функцию как значение, такие
-                свойства называются методами. Эти методы можно вызывать.
-                Найдем метод log, и только что мы вызывали этот метод. Это метод обекта console
+
+            </p>
+
+            <p>
+                <span class="text__accent-padding">console</span> -- это объект. Как это проверить? Можно
+                написать <span class="text__accent-padding">console</span> в консоли браузера и нажать enter
+            </p>
+
+            <p>
+                Консоль покажет ряд свойств этого объекта. Некоторые из этих свойств имеют функцию как значение,
+                такие свойства называются методами. Эти методы можно вызывать.
+                Найдем метод <span class="text__accent-padding">log</span>, и только что мы вызывали этот метод.
+                Это метод обекта <span class="text__accent-padding">console</span>
             </p>
 
             <p>
@@ -95,8 +137,9 @@
             </p>
 
             <p>
-                Почему это выражение? Потому, что вызов функции всегда возвращает значение. И в данном примере результат
-                вызова функции это значение undefined (Это то, что нам вернул метод log)
+                Почему это выражение? Потому, что вызов функции всегда возвращает значение. И в данном
+                примере результат вызова функции это значение <span class="text__accent-padding">undefined</span>
+                Это то, что нам вернул метод <span class="text__accent-padding">log</span>
             </p>
 
 
