--- a/public/pages/theory/03_theme/03_lesson/03_lesson.html
+++ b/public/pages/theory/03_theme/03_lesson/03_lesson.html
@@ -1,12 +1,12 @@
 <!----- Header content ----->
 <div class="header2__content">
-    <!----- HEADER2 WRAPPER-1 ----->
     <div class="header2__wrapper-1">
         <!----- Bread Crumbs ----->
         <div class="header2__bread-crumbs">
             <a href="/theory" class="back-link main__link-default">Теория</a>
-            <a href="/theory/theme_00" class="back-link main__link-default">00 название темы</a>
+            <a href="/theory/theme_03" class="back-link main__link-default">03 Переменные и типы</a>
         </div><!--bread-crumbs-->
+
     </div><!--header__wrapper-1-->
 </div><!--header content -->
 
@@ -14,18 +14,20 @@
 <div class="margin__main">
     <div class="main">
         <div class="main__wrapper-1">
-            <h1 class="main__title-1">Урок 00: Название</h1>
-
-            <h2 class="main__title-2">Заголовок</h2>
-
+            <h1 class="main__title-1">Урок 3. Практика по созданию переменных</h1>
             <p>
+
             </p>
+
+
+
+
 
             <!-- 01 RUN CODE -->
             <div class="run__code-block">
-                <a class="run__code-link" href="/pages/theory/00_theme/00_lesson/01_run_code/index.html" target="_blank"
+                <a class="run__code-link" href="/pages/theory/03_theme/03_lesson/01_run_code/index.html" target="_blank"
                     rel="noopener noreferrer">Запустить код</a>
-                <a class="run__code-link" href="/pages/theory/00_theme/00_lesson/01_run_code.zip" download>скачать
+                <a class="run__code-link" href="/pages/theory/03_theme/03_lesson/01_run_code.zip" download>скачать
                     блок кода</a>
             </div>
 
