02 тема 3 урока - complete!

--- a/public/pages/theory/02_theme/03_lesson/03_lesson.html
+++ b/public/pages/theory/02_theme/03_lesson/03_lesson.html
@@ -28,20 +28,36 @@
             </p>
 
             <ul>
-                <li>'abc' // строка</li>
-                <li>10 // число</li>
-                <li>5 + 2 // выражение с использованием оператора + ., и результатом такого выражения будет число 7</li>
-                <li>c = 10 // Переменной c присваивается число 10. Результатом этого выражения будет то значение,
-                    которое присвоено переменной. В данном примере это значение 10</li>
-                <li>'Good' + 'Evening' // Конкатенация сторк с помощью оператора + ., результатом этого выражения одна
-                    строка</li>
-                <li>a &lt;= b || c !==d // Выражение с несколькими операторами. || оператор "или" !==оператор "не равно"
-                    &lt;=оператор "меньше либо равно" </li>
-                <li>myFunction(c,d) // Вызов функции. В этом примере вызов функции myFunction с аргументами с и d</li>
+                <li><span class="text__accent-padding">'abc'</span> // строка</li>
+                <li><span class="text__accent-padding">10</span> // число</li>
+                <li><span class="text__accent-padding">5 + 2</span> // выражение с использованием оператора
+                    <span class="text__accent-padding">+</span>, и
+                    результатом такого выражения будет число <span class="text__accent-padding">7</span>
+                </li>
+                <li><span class="text__accent-padding">c = 10</span> // Переменной <span
+                        class="text__accent-padding">c</span>
+                    присваивается число <span class="text__accent-padding">10</span>.
+                    Результатом этого выражения будет то значение, которое присвоено переменной. В данном примере это
+                    значение <span class="text__accent-padding">10</span></li>
+                <li>'Good' + 'Evening' // Конкатенация строк с помощью оператора
+                    <span class="text__accent-padding">+</span>, результатом этого выражения является одна "строка"
+                </li>
+                <li><span class="text__accent-padding">a &lt;= b || c !==d</span> // Выражение с несколькими
+                    операторами :
+                    <ul>
+                        <li><span class="text__accent-padding">||</span> оператор "или"</li>
+                        <li><span class="text__accent-padding">!==</span> оператор "не равно"</li>
+                        <li><span class="text__accent-padding">&lt;=</span> оператор "меньше либо равно"</li>
+                    </ul>
+                </li>
+                <li><span class="text__accent-padding">myFunction(c, d)</span> // Вызов функции. В этом примере вызов
+                    функции <span class="text__accent-padding">myFunction</span> с аргументами
+                    <span class="text__accent-padding">с</span> и <span class="text__accent-padding">d</span>
+                </li>
             </ul>
 
             <p>
-                Примеры выражений с результатами:
+                Примеры выражений с результатами :
             </p>
 
             <!---------- DEMO CODE ---------->
@@ -68,7 +84,7 @@
             <!---------- DEMO CODE ---------->
             <pre class="code__example-block">
                 <code>
-                'Good ' + 'Evening' // Результат выражения: 'Good Evening' (новая строка)
+                'Good ' + 'Evening' // Результат выражения: 'Good Evening' (новая "строка")
                 </code>
             </pre>
 
@@ -82,14 +98,14 @@
             <!---------- DEMO CODE ---------->
             <pre class="code__example-block">
                 <code>
-                myFunction(c,d) // Результат выражения: Результат функции.
+                myFunction(c, d) // Результат выражения: Результат функции.
 
                 // То, что возвращает функция в конце выполнения.
                 </code>
             </pre>
 
             <p>
-                Выражение присваивания
+                Выражение присваивания :
             </p>
 
             <!---------- DEMO CODE ---------->
@@ -112,8 +128,10 @@
             </pre>
 
             <p>
-                Кроме возвращения значения (значение 5), приведет к выполнению еще другого действия.
-                Побочное действие - значение 5 будет присвоено перменной a
+                Кроме возвращения значения <span class="text__accent-padding">5</span> , это выражение приведет к
+                выполнению еще другого действия. Побочное действие - значение
+                <span class="text__accent-padding">5</span> будет присвоено переменной
+                <span class="text__accent-padding">a</span>.
                 Позже в коде можно будет обратиться к этой переменой и прочесть это значение. То есть были выполнены
                 какие-то действия, кроме возврата значения этого выражения
             </p>
@@ -126,24 +144,29 @@
             </pre>
 
             <p>
-                В этом выражении используется оператор ++
-                Этот оператор увеличивает значение переменной на единицу. Например, если переменная b содержала цифру 6,
-                то после применения к ней оператора ++ значение этой перемнной будет увеличино на единицу и будет
-                равняться цифре 7
-                Это выражение вернет цифру 7, и кроме этого значение переменой b увеличится на единицу, то есть будет
-                выполнено другое побочное действие.
-                Побочное действие - увеличение значения переменной b на единицу.
+                В этом выражении используется оператор <span class="text__accent-padding">++</span>.
+                Этот оператор увеличивает значение переменной на единицу. Например, если переменная
+                <span class="text__accent-padding">b</span> содержала цифру <span class="text__accent-padding">6</span>,
+                то после применения к ней оператора <span class="text__accent-padding">++</span> значение этой
+                переменной будет увеличино на единицу и будет равняться цифре
+                <span class="text__accent-padding">7</span>.
+                Это выражение вернет цифру <span class="text__accent-padding">7</span>, и кроме этого значение
+                переменной
+                <span class="text__accent-padding">b</span> увеличится на единицу, то есть будет
+                выполнено другое побочное действие, кроме возврата нового значения.
+                Побочное действие - увеличение значения переменной <span class="text__accent-padding">b</span> на
+                единицу.
             </p>
 
             <p>
-                В этом примере мы видим вызов функции
+                В этом примере мы видим вызов функции :
             </p>
 
 
             <!---------- DEMO CODE ---------->
             <pre class="code__example-block">
                 <code>
-                myFunction(c,d)   
+                myFunction(c, d)   
                 </code>
             </pre>
 
